Add new methods
